# sysdb

./: .gitignore  .travis.yml  COPYING  Makefile.am  README  ReleaseNotes  THANKS  autogen.sh  configure.ac  coverage.sh  version-gen.sh
doc/: Makefile.am  asciidoc.conf  syscollectord.1.txt  sysdb-auth.txt  sysdb-description.txt  sysdb-man.css  sysdb.1.txt  sysdb.7.txt  sysdbd-cname-dns.5.txt  sysdbd-collectd-unixsock.5.txt  sysdbd-facter.5.txt  sysdbd-mk-livestatus.5.txt  sysdbd-puppet-store-configs.5.txt  sysdbd-store-memory.5.txt  sysdbd-store-network.5.txt  sysdbd-syslog.5.txt  sysdbd-timeseries-rrdtool.5.txt  sysdbd.1.txt  sysdbd.conf.5.txt  sysdbql.7.txt
m4/: sc_plugin.m4  sdb_plugin.m4
src/: Makefile.am  syscollector.c  sysdb.c
src/backend/: collectd.c  mk-livestatus.c  puppet-storeconfigs.c
src/backend/collectd/: unixsock.c
src/backend/puppet/: store-configs.c
src/client/: client.c  sock.c  sysdb.c
src/core/: data.c  error.c  memstore-private.h  memstore.c  memstore_exec.c  memstore_expr.c  memstore_lookup.c  memstore_query.c  object.c  plugin.c  store-private.h  store.c  store_exec.c  store_expr.c  store_json.c  store_lookup.c  store_query.c  time.c  timeseries.c
src/daemon/: config.c  syscollectord.c  syscollectord.conf  sysdbd.c  sysdbd.conf  sysdbd.conf.sample
src/frontend/: analyzer.c  connection-private.h  connection.c  grammar.y  parser.c  query.c  scanner.l  session.c  sock.c  store.c
src/include/: syscollector.h.in  sysdb.h.in
src/include/client/: sock.h  sysdb.h.in
src/include/core/: data.h  error.h  memstore.h  object.h  plugin.h  store.h  time.h  timeseries.h
src/include/daemon/: config.h
src/include/frontend/: connection-private.h  connection.h  parser.h  proto.h  sock.h
src/include/parser/: ast.h  parser.h
src/include/utils/: avltree.h  channel.h  data.h  dbi.h  error.h  llist.h  os.h  proto.h  ssl.h  strbuf.h  string.h  strings.h  time.h  unixsock.h
src/liboconfig/: Makefile.am  aux_types.h  oconfig.c  oconfig.h  parser.y  scanner.l  utils.c  utils.h
src/parser/: analyzer.c  ast.c  grammar.y  parser.c  scanner.l
src/plugins/: syslog.c
src/plugins/backend/: facter.cc  mk-livestatus.c
src/plugins/backend/collectd/: unixsock.c
src/plugins/backend/puppet/: store-configs.c
src/plugins/cname/: dns.c
src/plugins/store/: memory.c  network.c
src/plugins/timeseries/: rrdtool.c
src/tools/sysdb/: command.c  command.h  input.c  input.h  json.c  json.h  main.c  scanner.l
src/tools/sysdbd/: configfile.c  configfile.h  main.c  sysdbd.conf.sample
src/utils/: avltree.c  channel.c  dbi.c  error.c  llist.c  os.c  proto.c  ssl.c  strbuf.c  string.c  strings.c  time.c  unixsock.c
t/: Makefile.am  cibuild.sh  coverage.sh  libsysdb_net_test.c  libsysdb_test.c  libsysdb_test.h  libsysdb_testutils.c  libsysdb_testutils.h  testwrapper.sh  valgrind.suppress
t/core/: data_test.c  object_test.c  store_lookup_test.c  store_test.c  time_test.c
t/frontend/: connection_test.c  parser_test.c  sock_test.c
t/integration/: client.sh  config.sh  filter.sh  matching.sh  mock_plugin.c  mock_timeseries.c  query.sh  query_fetch.sh  query_list.sh  query_timeseries.sh  simple_config.sh  simple_query.sh  ssl.sh  store.sh  test_lib.sh
t/unit/: libsysdb_net_test.c  libsysdb_test.c  libsysdb_test.h  libsysdb_testutils.c  libsysdb_testutils.h  testutils.c  testutils.h
t/unit/core/: data_test.c  object_test.c  store_expr_test.c  store_json_test.c  store_lookup_test.c  store_test.c  time_test.c  timeseries_test.c
t/unit/frontend/: connection_test.c  parser_test.c  query_test.c  sock_test.c
t/unit/parser/: ast_test.c  parser_test.c
t/unit/utils/: avltree_test.c  channel_test.c  dbi_test.c  llist_test.c  os_test.c  proto_test.c  strbuf_test.c  strings_test.c  unixsock_test.c
t/utils/: channel_test.c  dbi_test.c  llist_test.c  strbuf_test.c  unixsock_test.c
